Enhancement (Readability): Fix line-height of main. Fix min-height/height of header when on big screens.

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ main {
 main {
   text-align: center;
   font-size: 1.2rem;
-  line-height: 90%;
+  line-height: 110%;
   font-weight: 600;
   padding: var(--padding);
 }
@@ -53,7 +53,8 @@ main {
 
 @media screen and (min-width: 750px) {
   header {
-    min-height: 230px;
+    min-height: unset;
+    height: 200px;
   }
 
   nav {
